--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Discusim</string>
+
+    <!-- Common Errors -->
+    <string name="error_unknown">Unknown error</string>
+    <string name="error_network">Network error</string>
+
+    <!-- Auth -->
+    <string name="auth_title">Authorization</string>
 </resources>
