Add the Channel (a.k.a. a subtype of Forum) screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
 
     <!-- Auth -->
     <string name="auth_title">Authorization</string>
+
+    <!-- Channel -->
+    <string name="channel_about">About</string>
 </resources>
