Implement the flow "Main" with tabs and replace Alligator to Cicerone for navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <!-- Auth -->
     <string name="auth_title">Authorization</string>
 
+    <!-- Main Flow -->
+    <string name="main_flow_profile">Profile</string>
+
     <!-- Channel -->
     <string name="channel_about">About</string>
 
