Add the "Forums" tab to the "Main" flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
 
     <!-- Main Flow -->
     <string name="main_flow_profile">Profile</string>
+    <string name="main_flow_forums">Forums</string>
+
+    <!-- Forums -->
+    <string name="forums_title">Forums</string>
 
     <!-- Channel -->
     <string name="channel_about">About</string>
