--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,9 @@
 
     <!-- Channel -->
     <string name="channel_about">About</string>
+    <string name="channel_latest">Latest</string>
+    <string name="channel_hot">Hot</string>
+    <string name="channel_popular">Popular</string>
 
     <!-- Channel Details -->
     <string name="channel_details_guidelines">Community Guidelines</string>
