Refactor the "Profile Activity" screen, repositories, mappers and models

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,13 @@
     <string name="auth_title">Authorization</string>
 
     <!-- Main Flow -->
-    <string name="main_flow_activity">Activity</string>
+    <string name="main_flow_profile_activity">Activity</string>
     <string name="main_flow_trends">Trends</string>
     <string name="main_flow_profile">Profile</string>
     <string name="main_flow_forums">Forums</string>
+
+    <!-- Profile Activity -->
+    <string name="profile_activity_title">Activity</string>
 
     <!-- Forums -->
     <string name="forums_title">Forums</string>
