--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,25 +52,9 @@
     <!-- Forums -->
     <string name="forums_title">Forums</string>
 
-    <!-- Channel -->
-    <string name="channel_about">About</string>
-    <string name="channel_latest">Latest</string>
-    <string name="channel_hot">Hot</string>
-    <string name="channel_popular">Popular</string>
+    <!-- Forum Container -->
+    <string name="forum_container_tab_details">Details</string>
+    <string name="forum_container_tab_latest">Latest</string>
+    <string name="forum_container_tab_hot">Hot</string>
 
-    <!-- Channel Details -->
-    <string name="channel_details_guidelines">Community Guidelines</string>
-
-    <plurals name="channel_details_num_threads">
-        <item quantity="one">%d Discussion</item>
-        <item quantity="other">%d Discussions</item>
-    </plurals>
-
-    <plurals name="channel_details_num_followers">
-        <item quantity="one">%d Follower</item>
-        <item quantity="other">%d Followers</item>
-    </plurals>
-
-    <string name="channel_details_questions">Have questions about channel?</string>
-    <string name="channel_details_help">Channel Help</string>
 </resources>
