--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,10 +52,13 @@
     <!-- Forums -->
     <string name="forums_title">Forums</string>
 
-    <!-- Forum Container -->
-    <string name="forum_container_tab_details">Details</string>
-    <string name="forum_container_tab_latest">Latest</string>
-    <string name="forum_container_tab_hot">Hot</string>
-    <string name="forum_container_tab_popular">Popular</string>
+    <!-- Forum Flow -->
+    <string name="forum_flow_details">Details</string>
+    <string name="forum_flow_threads">Threads</string>
+    <string name="forum_flow_temp">Temp</string> <!-- TODO Временно -->
+
+    <!-- Forum Details Container -->
+    <string name="forum_details_container_details">Details</string>
+    <string name="forum_details_container_topics">Topics</string>
 
 </resources>
