Change "User Activity" screen to "My Activity"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,12 +34,12 @@
     <string name="auth_title">Authorization</string>
 
     <!-- Main Flow -->
-    <string name="main_flow_user_activity">Activity</string>
+    <string name="main_flow_my_activity">Activity</string>
     <string name="main_flow_forums">Forums</string>
     <string name="main_flow_profile">Profile</string>
 
-    <!-- User Activity -->
-    <string name="user_activity_title">Activity</string>
+    <!-- My Activity -->
+    <string name="my_activity_title">Activity</string>
 
     <!-- Item User Activity -->
     <string name="item_user_activity_upvoted_thread">upvoted thread %s</string>
