Refactor "My Activity" screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,14 +6,9 @@
     <string name="msg_empty_data">Empty data</string>
 
     <!-- Time -->
-    <plurals name="time_days">
-        <item quantity="one">%d day ago</item>
-        <item quantity="other">%d days ago</item>
-    </plurals>
-
-    <plurals name="time_hours">
-        <item quantity="one">%d hour ago</item>
-        <item quantity="other">%d hours ago</item>
+    <plurals name="time_seconds">
+        <item quantity="one">%d second ago</item>
+        <item quantity="other">%d seconds ago</item>
     </plurals>
 
     <plurals name="time_minutes">
@@ -21,10 +16,16 @@
         <item quantity="other">%d minutes ago</item>
     </plurals>
 
-    <plurals name="time_seconds">
-        <item quantity="one">%d second ago</item>
-        <item quantity="other">%d seconds ago</item>
+    <plurals name="time_hours">
+        <item quantity="one">%d hour ago</item>
+        <item quantity="other">%d hours ago</item>
     </plurals>
+
+    <plurals name="time_days">
+        <item quantity="one">%d day ago</item>
+        <item quantity="other">%d days ago</item>
+    </plurals>
+    <!-- Time -->
 
     <!-- Common Errors -->
     <string name="error_unknown">Unknown error</string>
