--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,8 +69,9 @@
     <string name="user_flow_details_tab">Details</string>
 
     <!-- User Details -->
-    <string name="user_details_username">`@`%s</string>
-    <string name="user_details_num_upvotes"><b>%d</b> Upvotes</string>
+    <string name="user_details_username">\@%s</string>
+    <string name="user_details_num_upvotes">&lt;b>%d&lt;/b> Upvotes</string>
+    <string name="user_details_joined_date">Joined %s</string>
 
     <!-- List Items. Start -->
 
