Add "User Activity" screen for tab "Activity" in "User Flow"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
 
     <!-- User Flow -->
     <string name="user_flow_details_tab">Details</string>
+    <string name="user_flow_activity_tab">Activity</string>
 
     <!-- User Details -->
     <string name="user_details_username">\@%s</string>
