--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <!-- User Flow -->
     <string name="user_flow_details_tab">Details</string>
     <string name="user_flow_activity_tab">Activity</string>
+    <string name="user_flow_comments_tab">Comments</string>
 
     <!-- User Details -->
     <string name="user_details_username">\@%s</string>
