Add "User Forums" screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="user_flow_details_tab">Details</string>
     <string name="user_flow_activity_tab">Activity</string>
     <string name="user_flow_comments_tab">Comments</string>
+    <string name="user_flow_forums_tab">Forums</string>
 
     <!-- User Details -->
     <string name="user_details_username">\@%s</string>
