Add "User Followers" screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="user_flow_activity_tab">Activity</string>
     <string name="user_flow_comments_tab">Comments</string>
     <string name="user_flow_forums_tab">Forums</string>
+    <string name="user_flow_followers_tab">Followers</string>
 
     <!-- User Details -->
     <string name="user_details_username">\@%s</string>
