--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,23 +50,23 @@
 
     <!-- Forum Flow -->
     <string name="forum_flow_details">Details</string>
-    <string name="forum_flow_threads">Threads</string>
+    <string name="forum_flow_discussions">Discussions</string>
 
     <!-- Forum Details Container -->
     <string name="forum_details_container_details">Details</string>
     <string name="forum_details_container_topics">Topics</string>
 
     <!-- Forum Details -->
-    <string name="forum_details_threads">Threads</string>
+    <string name="forum_details_discussions">Discussions</string>
     <string name="forum_details_followers">Followers</string>
 
-    <!-- Forum Threads Container -->
-    <string name="forum_threads_container_latest">Latest</string>
-    <string name="forum_threads_container_hot">Hot</string>
-    <string name="forum_threads_container_popular">Popular</string>
+    <!-- Forum Discussions Container -->
+    <string name="forum_discussions_container_latest">Latest</string>
+    <string name="forum_discussions_container_hot">Hot</string>
+    <string name="forum_discussions_container_popular">Popular</string>
 
-    <!-- Thread Details -->
-    <string name="thread_details_username">\@%s</string>
+    <!-- Discussion Details -->
+    <string name="discussion_details_username">\@%s</string>
 
     <!-- User Flow -->
     <string name="user_flow_details_tab">Details</string>
@@ -84,8 +84,8 @@
     <!-- List Items. Start -->
 
     <!-- Item User Activity -->
-    <string name="item_user_activity_upvoted_thread">upvoted thread %s</string>
-    <string name="item_user_activity_commented_thread">commented on thread %s</string>
+    <string name="item_user_activity_upvoted_discussion">upvoted discussion %s</string>
+    <string name="item_user_activity_commented_discussion">commented on discussion %s</string>
 
     <!-- List Items. End -->
 
