Add handling 400 and 500 HTTP error codes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,8 @@
     <!-- Common Messages. End -->
 
     <!-- Common Errors -->
+    <string name="error_bad_request">Bad Request</string>
+    <string name="error_server">Server error</string>
     <string name="error_network">Network error</string>
     <string name="error_unknown">Unknown error</string>
 
