--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,8 +34,8 @@
     <!-- Common Messages. End -->
 
     <!-- Common Errors -->
-    <string name="error_bad_request">Bad Request</string>
-    <string name="error_server">Server error</string>
+    <string name="error_bad_request">400 Bad Request</string>
+    <string name="error_server">500 Server Error</string>
     <string name="error_network">Network error</string>
     <string name="error_unknown">Unknown error</string>
 
