Add bullet divider between username and date of discussion, and change text styling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
 
     <string name="action_share">Share</string>
 
+    <string name="symbol_bullet">\u2022</string>
+
     <!-- Time. Start -->
     <plurals name="time_seconds">
         <item quantity="one">%d second ago</item>
