--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name" translatable="false">Discusim</string>
+    <string name="app_description">Unofficial Disqus client</string>
+    <string name="app_version">Version %f (build %d)</string>
 
     <!-- Common Messages. Start -->
     <string name="msg_refresh">Refresh</string>
     <string name="msg_share">Share</string>
     <string name="msg_empty_data">Empty data</string>
+
     <string name="msg_follow">Follow</string>
     <string name="msg_following">Following</string>
 
@@ -56,6 +59,7 @@
 
     <!-- My Profile -->
     <string name="my_profile_title">Profile</string>
+    <string name="my_profile_about_app">About</string>
 
     <!-- Forum Host -->
     <string name="forum_host_details_tab">Details</string>
@@ -96,6 +100,13 @@
     <string name="user_details_username">\@%s</string>
     <string name="user_details_num_upvotes">&lt;b>%d&lt;/b> Upvotes</string>
     <string name="user_details_joined_date">Joined %s</string>
+
+    <!-- About -->
+    <string name="about_title">About</string>
+    <string name="about_write_feedback">Write feedback</string>
+    <string name="about_rate_app">Rate the app</string>
+    <string name="about_share_app">Share the app</string>
+    <string name="about_libraries">Open Source Libraries</string>
 
     <!-- List Items. Start -->
 
