Add "Open Source Libraries" screen (all libraries have not been added yet)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,9 @@
     <string name="about_share_app">Share the app</string>
     <string name="about_libraries">Open Source Libraries</string>
 
+    <!-- App Libraries -->
+    <string name="app_libraries_title">Open Source Libraries</string>
+
     <!-- List Items. Start -->
 
     <!-- Item User Activity -->
